script/Istio/circuit-breaking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kim-payment-service-circuit-breaking
spec:
  host: kim-payment-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection: #异常点检测
      consecutiveErrors: 1 #连续错误
      interval: 1s
      baseEjectionTime: 3m #逐出时间
      maxEjectionPercent: 100 #最大逐出百分比
