script/Istio/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kim-payment-service
spec:
  host: kim-payment-service
  subsets:
    - name: v1
      labels:
        version: 1.0-SNAPSHOT
    - name: v2
      labels:
        version: 2.0-SNAPSHOT
