script/Istio/gateway-bookinfo.tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-bookinfo-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-bookinfo-certs/tls.key
      hosts:
        - "bookinfo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-gateway-service
spec:
  hosts:
    - "bookinfo.com"
  gateways:
    - bookinfo-gateway
  http:
    - route:
        - destination:
            host: kim-gateway-service
            port:
              number: 8080
