script/Istio/gateway-mutual-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kim-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
        caCertificates: /etc/istio/ingressgateway-ca-certs/example.com.crt
      hosts:
        - "kim.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-gateway-service
spec:
  hosts:
    - "kim.example.com"
  gateways:
    - kim-gateway
  http:
    - route:
        - destination:
            host: kim-gateway-service
            port:
              number: 8080
