script/Istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kim-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-gateway-service
spec:
  hosts:
    - "*"
  gateways:
    - kim-gateway
  http:
   - route:
      - destination:
          host: kim-gateway-service
          port:
            number: 8080
