script/Istio/mrroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-payment-service
spec:
  hosts:
    - kim-payment-service
  http:
    - route:
        - destination:
            host: kim-payment-service
            subset: v1
          weight: 100
      mirror:
        host: kim-payment-service
        subset: v2
      mirror_percent: 100
