script/Istio/vs-cheng-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-payment-service
spec:
  hosts:
    - kim-payment-service
  http:
    - fault:
        delay:
          fixedDelay: 7s
          percentage:
            value: 100
      match:
        - headers:
            end-user:
              exact: cheng
      route:
        - destination:
            host: kim-payment-service
            subset: v1
    - route:
        - destination:
            host: kim-payment-service
            subset: v1
