script/Istio/vs-cheng-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-payment-service
spec:
  hosts:
    - kim-payment-service
  http:
    - match:
        - headers:
            end-user:
              exact: cheng
      route:
        - destination:
            host: kim-payment-service
            subset: v2
    - route:
        - destination:
            host: kim-payment-service
            subset: v1
