script/Istio/vs-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kim-payment-service
spec:
  hosts:
    - kim-payment-service
  http:
    - route:
        - destination:
            host: kim-payment-service
            subset: v1
          weight: 50
        - destination:
            host: kim-payment-service
            subset: v2
          weight: 50
